--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -34,6 +34,7 @@ maintenance = { status = "actively-developed" }
 
 [features]
 schemars_0_8 = []
+schemars_0_9 = []
 
 [dependencies]
 darling = "0.20.0"
