--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -57,6 +57,8 @@ guide = ["dep:document-features", "macros", "std"]
 #! These features are disabled by default to minimize the number of required dependencies.
 
 ## The feature enables serializing data in base64 format.
+##
+## This pulls in [`base64`] as a dependency.
 base64 = ["dep:base64", "alloc"]
 ## Deprecated feature name. Use `chrono_0_4` instead.
 chrono = ["chrono_0_4"]
@@ -65,23 +67,23 @@ chrono = ["chrono_0_4"]
 ## More features are available in combination with `alloc` or `std`.
 ## The legacy feature name `chrono` is still available for v1 compatibility.
 ##
-## This pulls in `chrono` v0.4 as a dependency.
+## This pulls in [`chrono` v0.4](::chrono_0_4) as a dependency.
 chrono_0_4 = ["dep:chrono_0_4"]
 ## The feature enables `hashbrown::{HashMap, HashSet}` as supported containers.
 ##
-## This pulls in `hashbrown` v0.14 as a dependency.
+## This pulls in [`hashbrown` v0.14](::hashbrown_0_14) as a dependency.
 ## It enables the `alloc` feature.
 ## Some functionality is only available when `std` is enabled too.
 hashbrown_0_14 = ["dep:hashbrown_0_14", "alloc"]
 ## The feature enables `hashbrown::{HashMap, HashSet}` as supported containers.
 ##
-## This pulls in `hashbrown` v0.15 as a dependency.
+## This pulls in [`hashbrown` v0.15](::hashbrown_0_15) as a dependency.
 ## It enables the `alloc` feature.
 ## Some functionality is only available when `std` is enabled too.
 hashbrown_0_15 = ["dep:hashbrown_0_15", "alloc"]
 ## The feature enables serializing data in hex format.
 ##
-## This pulls in `hex` as a dependency.
+## This pulls in [`hex`] as a dependency.
 ## It enables the `alloc` feature.
 hex = ["dep:hex", "alloc"]
 ## Deprecated feature name. Use `indexmap_1` instead.
@@ -90,45 +92,45 @@ indexmap = ["indexmap_1"]
 ## This includes support for checking duplicate keys and duplicate values.
 ## The legacy feature name `indexmap` is still available for v1 compatibility.
 ##
-## This pulls in `indexmap` v1 as a dependency.
+## This pulls in [`indexmap` v1](::indexmap_1) as a dependency.
 ## It enables the `alloc` feature.
 ## Some functionality is only available when `std` is enabled too.
 indexmap_1 = ["dep:indexmap_1", "alloc"]
 ## The feature enables implementations of `indexmap` v2 specific checks.
 ## This includes support for checking duplicate keys and duplicate values.
 ##
-## This pulls in `indexmap` v2 as a dependency.
+## This pulls in [`indexmap` v2](::indexmap_2) as a dependency.
 ## It enables the `alloc` feature.
 ## Some functionality is only available when `std` is enabled too.
 indexmap_2 = ["dep:indexmap_2", "alloc"]
 ## The feature enables JSON conversions from the `json` module.
 ##
-## This pulls in `serde_json` as a dependency.
+## This pulls in [`serde_json`] as a dependency.
 ## It enables the `alloc` feature.
 json = ["dep:serde_json", "alloc"]
 ## The feature enables all helper macros and derives.
 ## It is enabled by default, since the macros provide a usability benefit, especially for `serde_as`.
 ##
-## This pulls in `serde_with_macros` as a dependency.
+## This pulls in [`serde_with_macros`] as a dependency.
 macros = ["dep:serde_with_macros"]
 ## This feature enables integration with `schemars` 0.8.
 ## This makes `#[derive(JsonSchema)]` pick up the correct schema for the type
 ## used within `#[serde_as(as = ...)]`.
 ##
-## This pulls in `schemars` v0.8 as a dependency. It will also implicitly enable
+## This pulls in [`schemars` v0.8](::schemars_0_8) as a dependency. It will also implicitly enable
 ## the `std` feature as `schemars` is not `#[no_std]`.
 schemars_0_8 = ["dep:schemars_0_8", "std", "serde_with_macros?/schemars_0_8"]
 ## This feature enables integration with `schemars` 0.9
 ## This makes `#[derive(JsonSchema)]` pick up the correct schema for the type
 ## used within `#[serde_as(as = ...)]`.
 ##
-## This pulls in `schemars` v0.9 as a dependency. It will also implicitly enable
+## This pulls in [`schemars` v0.9](::schemars_0_9) as a dependency. It will also implicitly enable
 ## the `alloc` feature.
 schemars_0_9 = ["dep:schemars_0_9", "alloc", "serde_with_macros?/schemars_0_9", "dep:serde_json"]
 ## The feature enables integration of `time` v0.3 specific conversions.
 ## This includes support for the timestamp and duration types.
 ##
-## This pulls in `time` v0.3 as a dependency.
+## This pulls in [`time` v0.3](::time_0_3) as a dependency.
 ## Some functionality is only available when `alloc` or `std` is enabled too.
 time_0_3 = ["dep:time_0_3"]
 
