--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: rustfmt
+          cache: false
 
       - name: Rustfmt Check (${{ matrix.rust }})
         uses: actions-rust-lang/rustfmt@v1
