Add support for `schemars` v1
* Copy existing `schemars_0_9` code to `schemars_1` and update feature
  flags and names
* Add extra bounds for BTreeMap and HashMap keys
* Update snapshot files for v0.9->v1 differences
* Bumped syn in lockfile as schemars_derive uses types introduced in syn
    2.0.81

--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -35,6 +35,7 @@ maintenance = { status = "actively-developed" }
 [features]
 schemars_0_8 = []
 schemars_0_9 = []
+schemars_1 = []
 
 [dependencies]
 darling = "0.20.0"
