--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -81,6 +81,12 @@ hashbrown_0_14 = ["dep:hashbrown_0_14", "alloc"]
 ## It enables the `alloc` feature.
 ## Some functionality is only available when `std` is enabled too.
 hashbrown_0_15 = ["dep:hashbrown_0_15", "alloc"]
+## The feature enables `hashbrown::{HashMap, HashSet}` as supported containers.
+##
+## This pulls in [`hashbrown` v0.16](::hashbrown_0_16) as a dependency.
+## It enables the `alloc` feature.
+## Some functionality is only available when `std` is enabled too.
+hashbrown_0_16 = ["dep:hashbrown_0_16", "alloc"]
 ## The feature enables serializing data in hex format.
 ##
 ## This pulls in [`hex`] as a dependency.
@@ -148,6 +154,7 @@ chrono_0_4 = { package = "chrono", version = "0.4.20", optional = true, default-
 document-features = { version = "0.2.7", optional = true }
 hashbrown_0_14 = { package = "hashbrown", version = "0.14.0", optional = true, default-features = false, features = ["serde"] }
 hashbrown_0_15 = { package = "hashbrown", version = "0.15.0", optional = true, default-features = false, features = ["serde"] }
+hashbrown_0_16 = { package = "hashbrown", version = "0.16.0", optional = true, default-features = false, features = ["serde"] }
 hex = { version = "0.4.3", optional = true, default-features = false }
 indexmap_1 = { package = "indexmap", version = "1.8", optional = true, default-features = false, features = ["serde-1"] }
 indexmap_2 = { package = "indexmap", version = "2.0", optional = true, default-features = false, features = ["serde"] }
@@ -205,6 +212,11 @@ required-features = ["hashbrown_0_14", "macros"]
 name = "hashbrown_0_15"
 path = "tests/hashbrown_0_15.rs"
 required-features = ["hashbrown_0_15", "macros"]
+
+[[test]]
+name = "hashbrown_0_16"
+path = "tests/hashbrown_0_16.rs"
+required-features = ["hashbrown_0_16", "macros"]
 
 [[test]]
 name = "indexmap_1"
