--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -37,11 +37,11 @@ default = ["std", "macros"]
 #! Some features require `alloc` or `std` support and might not work in a `no_std` environment.
 
 ## Enable support for types from the `alloc` crate when running in a `no_std` environment.
-alloc = ["serde/alloc", "base64?/alloc", "chrono_0_4?/alloc", "hex?/alloc", "serde_json?/alloc", "time_0_3?/alloc"]
+alloc = ["serde_core/alloc", "base64?/alloc", "chrono_0_4?/alloc", "hex?/alloc", "serde_json?/alloc", "time_0_3?/alloc"]
 ## Enables support for various types from the std library.
 ## This will enable `std` support in all dependencies too.
 ## The feature enabled by default and also enables `alloc`.
-std = ["alloc", "serde/std", "chrono_0_4?/clock", "chrono_0_4?/std", "indexmap_1?/std", "indexmap_2?/std", "time_0_3?/serde-well-known", "time_0_3?/std", "schemars_0_9?/std", "schemars_1?/std"]
+std = ["alloc", "serde_core/std", "chrono_0_4?/clock", "chrono_0_4?/std", "indexmap_1?/std", "indexmap_2?/std", "time_0_3?/serde-well-known", "time_0_3?/std", "schemars_0_9?/std", "schemars_1?/std"]
 
 #! # Documentation
 #!
@@ -161,8 +161,8 @@ indexmap_2 = { package = "indexmap", version = "2.0", optional = true, default-f
 schemars_0_8 = { package = "schemars", version = "0.8.16", optional = true, default-features = false }
 schemars_0_9 = { package = "schemars", version = "0.9.0", optional = true, default-features = false }
 schemars_1 = { package = "schemars", version = "1.0.2", optional = true, default-features = false }
-serde = { version = "1.0.152", default-features = false }
-serde_json = { version = "1.0.45", optional = true, default-features = false }
+serde_core = { version = "1.0.225", default-features = false, features = ["result"] }
+serde_json = { version = "1.0.145", optional = true, default-features = false }
 serde_with_macros = { path = "../serde_with_macros", version = "=3.14.1", optional = true }
 time_0_3 = { package = "time", version = "~0.3.36", optional = true, default-features = false }
 
