--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -52,12 +52,13 @@ version = "2.0.0"
 
 [dev-dependencies]
 expect-test = "1.5.0"
+glob = "0.3.0"
 pretty_assertions = "1.4.0"
+regex = { version = "1.11.0", default-features = false, features = ["std"] }
 rustversion = "1.0.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.25"
 trybuild = "1.0.80"
-version-sync = "0.9.1"
 
 [package.metadata.docs.rs]
 all-features = true
