--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -92,6 +92,11 @@ hashbrown_0_16 = ["dep:hashbrown_0_16", "alloc"]
 ## This pulls in [`hex`] as a dependency.
 ## It enables the `alloc` feature.
 hex = ["dep:hex", "alloc"]
+## The feature enables `SmallVec` as a supported container.
+##
+## This pulls in [`smallvec` v1](::smallvec_1) as a dependency.
+## It enables the `alloc` feature.
+smallvec_1 = ["dep:smallvec_1", "alloc"]
 ## Deprecated feature name. Use `indexmap_1` instead.
 indexmap = ["indexmap_1"]
 ## The feature enables implementations of `indexmap` v1 specific checks.
@@ -164,6 +169,7 @@ schemars_1 = { package = "schemars", version = "1.0.2", optional = true, default
 serde_core = { version = "1.0.225", default-features = false, features = ["result"] }
 serde_json = { version = "1.0.145", optional = true, default-features = false }
 serde_with_macros = { path = "../serde_with_macros", version = "=3.15.1", optional = true }
+smallvec_1 = { package = "smallvec", version = "1", optional = true, default-features = false }
 time_0_3 = { package = "time", version = "~0.3.36", optional = true, default-features = false }
 
 [dev-dependencies]
@@ -255,6 +261,11 @@ required-features = ["macros"]
 name = "rust"
 path = "tests/rust.rs"
 required-features = ["alloc"]
+
+[[test]]
+name = "smallvec_1"
+path = "tests/smallvec_1.rs"
+required-features = ["smallvec_1", "macros"]
 
 [[test]]
 name = "schemars_0_8"
