Update the documentation to refer to serde_core instead of serde
Disable --generate-link-to-definition for serde_with as Rust currently
panics when processing the crate with that flag enabled.
https://github.com/rust-lang/rust/issues/147882

Closes #896

--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -279,7 +279,8 @@ rustdoc-args = [
     "-Zunstable-options",
     # Generate links to definition in rustdoc source code pages
     # https://github.com/rust-lang/rust/pull/84176
-    "--generate-link-to-definition",
+    # Disable until https://github.com/rust-lang/rust/issues/147882 is resolved.
+    # "--generate-link-to-definition",
     # Generate buttons to show macro expansions in the rustdoc output.
     # https://github.com/rust-lang/rust/pull/137229
     "--generate-macro-expansion",
